Can now parse and process data in the OpenARIA CSV data format
* Added a demo that processes a 2nd data format!
* TrackMaker is now generic in the format of the raw Point data.
* Added ability to parse out AriaCsvHits from a flat file or a String.
* Can convert Track<AriaCsvHits> to TrackPairs and run ARIA on them.